force-app/main/default/objects/City_in_Israel__c/City_in_Israel__c.object-meta.xml
<CustomObject>
    <label>City in Israel</label>
    <nameField>
        <label>City in Israel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cities in Israel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>