force-app/main/default/objects/City_in_Israel__c/fields/City_Name_in_Hebrew__c.field-meta.xml
<CustomField>
    <fullName>City_Name_in_Hebrew__c</fullName>
    <label>City Name in Hebrew</label>
    <type>TextArea</type>
</CustomField>