force-app/main/default/objects/City_in_Israel__c/fields/Google_City_Name__c.field-meta.xml
<CustomField>
    <fullName>Google_City_Name__c</fullName>
    <label>Google City Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>