force-app/main/default/objects/City_in_Israel__c/fields/Municipal_Code__c.field-meta.xml
<CustomField>
    <fullName>Municipal_Code__c</fullName>
    <label>Municipal Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>