force-app/main/default/objects/City_in_Israel__c/fields/VOT_Region__c.field-meta.xml
<CustomField>
    <fullName>VOT_Region__c</fullName>
    <label>VOT Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abroad</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
            </value>
            <value>
                <fullName>Jerusalem</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>Otef Gaza</fullName>
            </value>
            <value>
                <fullName>Pzura</fullName>
            </value>
            <value>
                <fullName>Shomron</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>West Bank</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>