force-app/main/default/objects/City_in_Israel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City_Name_in_Hebrew__c</columns>
    <columns>VOT_Region__c</columns>
    <columns>Municipal_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>